Updated generate report, fixed uneven buttons

--- a/public/CSS/global.css
+++ b/public/CSS/global.css
@@ -20,6 +20,7 @@ p {
     border-radius: 10px;
     padding: 5px 10px;
     background-color: white;
+    font-size: 14px;
     /* margin: 10px 0; */
 }
 
